2004-11-04  Daniel Macks  <dmacks@netspace.org>

	* fink-virt-packages.in: remove unused variable.

2004-10-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.1, a bugfix
	release on branch_0_23

2004-10-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.23.0, a new release

2004-10-17  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.22.4, a bugfix
	release on branch_0_22

2004-10-15  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.22.3, a release
	on branch_0_22 which warns users about the bad gcc

2004-10-15  Christian Schaffner  <chris01@users.sourceforge.net>

	* fink.in: Add description of 'b, --use-binary-dist' to 'fink -h'

2004-10-12  Daniel Macks  <dmacks@netspace.org>

	* fink.info.in: Add Recommends:apt (needed by --use-binary-dist)
	(>=0.5.4-41 to get "apt-get --ignore-breakage" support). Moved
	storable-pm from Suggests to Recommends.

2004-10-12  Christian Schaffner  <chris01@users.sourceforge.net>

	* fink.in: Add new option '--use-binary-dist', '-b' that causes fink 
	to try to download pre-compiled binary packages from the binary 
	distribution if available and if deb is not already on the system
	* fink.8.in: Document '--use-binary-dist', '-b' options
	* fink.conf.5.in: Document 'UseBinaryDist'
	(Original idea and started by bbraun, Patches: #1037296)

2004-09-28  Daniel Macks  <dmacks@netspace.org>

	* fink.in: Implemented 'fink show-deps'.

2004-09-14  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* pathsetup.sh.in: new version which works for both CLI and GUI
	(released in version 0.21.3 for the 0.7.1 installer)

2004-09-10  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.22.2, a bugfix
	release on branch_0_22

2004-08-19  Dave Morrison  <dmrrsn@users.sourceforge.net>
