@@ -1,3 +1,10 @@
+2004-11-04  Christian Schaffner  <chris01@users.sourceforge.net>
+
+	* Engine.pm: Add a '--recursive' option to the remove and purge commands,
+	  which makes fink use 'apt-get remove'.
+	* PkgVersion.pm: Added two new phases: 'phase_deactivate_recursive'
+	  and 'phase_purge_recursive'.
+
 2004-11-02  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* PkgVersion.pm: run SplitForks on AppBundles
