@@ -1,3 +1,9 @@
+2004-11-04  Christian Schaffner  <chris01@users.sourceforge.net>
+
+	* fink.8.in: Document 'fink remove --recursive' and 
+	'fink purge --recursive', which also removes packages that depend 
+	on the package(s) to be removed.
+
 2004-11-04  Daniel Macks  <dmacks@netspace.org>
 
 	* fink-virt-packages.in: remove unused variable.
